# RaceBibRecognition

./: .gitignore  FacialRecognitinon.ipynb  README.md  images_to_numbers_easyocr.json  launch.json  main.ipynb  main.py  main2.ipynb  process_directories.ps1  pyproject.toml  requirements.txt  split_directory.ps1  trot_standard_command.txt  view-source_https___www.roblox.com_home.html  zero_shot_object_detection.ipynb
src/bib_recognition/: __init__.py  face_detection.py  gallery.py  metadata.py  ocr.py  processor.py
